@@ -97,10 +97,9 @@ public class PlatformProviderTest implements PlatformProvider {
         Task.Result result =
                 new JavacTask(tb, Task.Mode.EXEC)
                   .outdir(".")
-                  .options("-J-classpath",
-                           "-J" + System.getProperty("test.classes"),
-                           "-J-XaddExports:jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED",
-                           "-J-XaddExports:jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                  .options("-J--class-path=" + System.getProperty("test.classes"),
+                           "-J--add-exports=jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED",
+                           "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                            "-XDrawDiagnostics",
                            "-release",
                            platformSpec,
@@ -133,10 +132,9 @@ public class PlatformProviderTest implements PlatformProvider {
         Task.Result result =
                 new JavacTask(tb, Task.Mode.EXEC)
                   .outdir(".")
-                  .options("-J-classpath",
-                           "-J" + System.getProperty("test.classes"),
-                           "-J-XaddExports:jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED",
-                           "-J-XaddExports:jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                  .options("-J--class-path=" + System.getProperty("test.classes"),
+                           "-J--add-exports=jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED",
+                           "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                            "-release",
                            "fail",
                            System.getProperty("test.src") + "/PlatformProviderTestSource.java")
